added books to bookshelf

--- a/books.html
+++ b/books.html
@@ -5,7 +5,7 @@
 		<title>Hamed Rabah</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/books.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -13,6 +13,10 @@
 			<div id="wrapper">
 
 				<!-- Header -->
+					<header id="header">
+						<div class="inner">
+            <!-- Logo -->
+			
 				<header>
 					<h1>Hamed Rabah<br /> </h1> 
 					<a href="index.html" class="logo">
@@ -27,170 +31,69 @@
 						</div>
 					</header>
 
-				<!-- Menu -->
-					<!-- <nav id="menu">
-						<h2>Rabah</h2>
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Ipsum veroeros</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
-						</ul>
-					</nav> -->
-
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Program Manager at Microsoft<br /> </h1> 
 							</header>
 							<section class="tiles">
-								<article class="style1">
-									<span class="image">
-										<img src="images/watson1.jpg" alt="" />
+								<article class="content">
+									<span class="image" >
+										<img src="images/books/quantum.jpg" alt="" />
 									</span>
 									<a>
-										<h2>IBM Watson</h2>
 										<div class="content">
-											<p>Summer internship in product design at IBM Watson</p>
+											<p>An introduction to quantum mechanics and its applications in computing</p>
 										</div>
 									</a>
 								</article>
-								<article class="style2">
+								<article class="content">
 									<span class="image">
-										<img src="images/watches3.png" alt="" />
+										<img src="images/books/oil.jpg" alt="" />
 									</span>
-									<a href="watch.html">
-										<h2>Microsoft Watch</h2>
+									<a>
 										<div class="content">
-											<p> A concept for an enteprise focused smartwatch!</p>
+											<p>An introduction to the economics and physics of the world's most used energy source</p>
 										</div>
 									</a>
-								</article>
-								<article class="style3">
+								</article><article class="content">
 									<span class="image">
-										<img src="images/xbox.jpg" alt="" />
+										<img src="images/books/future.jpg" alt="" />
 									</span>
-									<a href="esports.html">
-										<h2>Xbox Esports</h2>
+									<a>
 										<div class="content">
-											<p>The solution I am proposing is a hub on both PC and Xbox for all things Esports — streaming tournaments, building a team, viewing live rankings, and engaging with the community.</p>
+											<p>What the future will look like in 100 years</p>
 										</div>
 									</a>
-								</article>
-								<article class="style6">
+								</article><article class="">
 									<span class="image">
-										<img src="images/ven.jpg" alt="" />
+										<img src="images/books/ataturk.jpg" alt="" />
 									</span>
-									<a href="venmo.html">
-										<h2>Venmo</h2>
+									<a>
 										<div class="content">
-											<p>Interviewing users on their Venmo experince, culiminating
-											in a UI redesign.</p>
+											<p>A balanced biography of the founder of Turkey</p>
 										</div>
 									</a>
-								</article>
-								<article class="style4">
+								</article><article class="">
 									<span class="image">
-										<img src="images/movie.jpg" alt="" />
+										<img src="images/books/malala.jpg" alt="" />
 									</span>
-									<a href="d3.html">
-										<h2>Data Driven Web Applications</h2>
+									<a>
 										<div class="content">
-											<p>Visualizing movie data in D3.js</p>
+											<p>The inspirational story of a heroic girl standing up to the Taliban.</p>
 										</div>
 									</a>
-								</article>
-								<article class="style1">
+								</article><article class="">
 									<span class="image">
-										<img src="images/animal.jpg" alt="" />
+										<img src="images/books/darwin.jpg" alt="" />
 									</span>
-									<a href="animals.html">
-										<h2>The SQL</h2>
+									<a>
 										<div class="content">
-											<p>Creating a dynamic webpage with a PHP server, login functionality, and a SQL database in the backend.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/social.jpg" alt="" />
-									</span>
-									<a href="design4good.html">
-										<h2>Designing for Social Impact</h2>
-										<div class="content">
-											<p>NaTakallam connects multilingual refugees with language learners through a video conferencing.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/robot.jpg" alt="" />
-									</span>
-									<a href="robots.html">
-										<h2>TechCrunch Robotics at MIT</h2>
-										<div class="content">
-											<p>I had the pleasure of attending the Tech Crunch Robotics conference at MIT</p>
-										</div>
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="images/bulb.jpg" alt="" />
-									</span>
-									<a href="vc.html">
-										<h2>Lessons from the Best Startups</h2>
-										<div class="content">
-											<p>What working in VC taught me about how the best startups operate.</p>
+											<p>The science behind genetic engineering systems like CRISPR and the ethical ramifications </p>
 										</div>
 									</a>
 								</article>
 
-								<!-- <article class="style1">
-									<span class="image">
-										<img src="images/pic09.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Nullam</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/pic10.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Ultricies</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/pic11.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Dictum</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images/pic12.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Pretium</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article> -->
 							</section>
 						</div>
 					</div>
