--- a/game.html
+++ b/game.html
@@ -1,28 +1,35 @@
-<head>
-  <title>Hamed Rabah</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-  <link rel="stylesheet" href="assets/css/main.css" />
-  <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-</head>
-<body class="is-preload">
-  <!-- Wrapper -->
-    <div id="wrapper">
+<!DOCTYPE HTML>
 
-      <!-- Header -->
-      <header>
-        <h1>Hamed Rabah<br /> </h1> 
-        <a href="index.html" class="logo">
-        <span class="title">PM at Microsoft</span>
-      <br></a>
-      </header>
-                      <!-- <nav> --> 
-            <a href="index.html"> <br>   <span class="navBar">Home</span></a>
-         <a href="game.html"> <span class="navBar">Game</span></a> 
-          <a href="books.html">  <span class="navBar">Books</span> </a>
+<html>
+	<head>
+		<title>Hamed Rabah</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/books.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
+		<!-- Wrapper -->
+			<div id="wrapper">
 
-          </div>
-        </header>
+				<!-- Header -->
+					<header id="header">
+						<div class="inner">
+            <!-- Logo -->
+			
+				<header>
+					<h1>Hamed Rabah<br /> </h1> 
+					<a href="index.html" class="logo">
+					<span class="title">PM at Microsoft</span>
+				<br></a>
+				</header>
+                        <!-- <nav> --> 
+              <a href="index.html"> <br>   <span class="navBar">Home</span></a>
+           <a href="game.html"> <span class="navBar">Game</span></a> 
+            <a href="books.html">  <span class="navBar">Books</span> </a>
+
+						</div>
+					</header>
 
 
 
