fixed mobile nav bar bug

--- a/books.html
+++ b/books.html
@@ -25,7 +25,7 @@
 				</header>
                         <!-- <nav> --> 
               <a href="index.html"> <br>   <span class="navBar">Home</span></a>
-           <a href="game.html"> <span class="navBar">Game</span></a> 
+           <a href="game.html"> <span class="navBar mobileHide" >Game</span></a> 
             <a href="books.html">  <span class="navBar">Books</span> </a>
 
 						</div>
@@ -42,7 +42,7 @@
 										<img src="images/books/quantum.jpg" alt="" />
 									</span>
 									<a>
-										<div class="content">
+										<div class="content mobileHide">
 											<p>An introduction to quantum mechanics and its applications in computing</p>
 										</div>
 									</a>
@@ -52,7 +52,7 @@
 										<img src="images/books/oil.jpg" alt="" />
 									</span>
 									<a>
-										<div class="content">
+										<div class="content mobileHide">
 											<p>An introduction to the economics and physics of the world's most used energy source</p>
 										</div>
 									</a>
@@ -61,7 +61,7 @@
 										<img src="images/books/future.jpg" alt="" />
 									</span>
 									<a>
-										<div class="content">
+										<div class="content mobileHide">
 											<p>What the future will look like in 100 years</p>
 										</div>
 									</a>
@@ -70,7 +70,7 @@
 										<img src="images/books/ataturk.jpg" alt="" />
 									</span>
 									<a>
-										<div class="content">
+										<div class="content mobileHide">
 											<p>A balanced biography of the founder of Turkey</p>
 										</div>
 									</a>
@@ -79,7 +79,7 @@
 										<img src="images/books/malala.jpg" alt="" />
 									</span>
 									<a>
-										<div class="content">
+										<div class="content mobileHide">
 											<p>The inspirational story of a heroic girl standing up to the Taliban.</p>
 										</div>
 									</a>
@@ -88,7 +88,7 @@
 										<img src="images/books/darwin.jpg" alt="" />
 									</span>
 									<a>
-										<div class="content">
+										<div class="content mobileHide">
 											<p>The science behind genetic engineering systems like CRISPR and the ethical ramifications </p>
 										</div>
 									</a>
