--- a/game.html
+++ b/game.html
@@ -5,7 +5,7 @@
 		<title>Hamed Rabah</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/books.css" />
+		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -17,16 +17,18 @@
 						<div class="inner">
             <!-- Logo -->
 			
-				<header>
-					<h1>Hamed Rabah<br /> </h1> 
+				<header >
+					<a href="index.html"> 
+
+					<h1>Hamed Rabah </h1> </a>
 					<a href="index.html" class="logo">
 					<span class="title">PM at Microsoft</span>
 				<br></a>
 				</header>
                         <!-- <nav> --> 
               <a href="index.html"> <br>   <span class="navBar">Home</span></a>
-           <a href="game.html"> <span class="navBar">Game</span></a> 
-            <a href="books.html">  <span class="navBar">Books</span> </a>
+			  <a href="game.html"> <span class="navBar mobileHide" >Game</span></a> 
+			  <a href="books.html">  <span class="navBar">Books</span> </a>
 
 						</div>
 					</header>
@@ -36,9 +38,7 @@
       <!-- Main -->
         <div id="main">
           <div class="inner">
-            <header>
-              <h1>Program Manager at Microsoft<br /> </h1> 
-                    <!-- Menu -->
+  
             </header>
             <h3> Penguin Pals!</h3>
             <p> This is a Flappy-Bird style game that I made for fun to learn Unity.</p>
