--- a/index.html
+++ b/index.html
@@ -17,16 +17,18 @@
 						<div class="inner">
             <!-- Logo -->
 			
-				<header>
-					<h1>Hamed Rabah<br /> </h1> 
+				<header >
+					<a href="index.html"> 
+
+					<h1>Hamed Rabah </h1> </a>
 					<a href="index.html" class="logo">
 					<span class="title">PM at Microsoft</span>
 				<br></a>
 				</header>
                         <!-- <nav> --> 
               <a href="index.html"> <br>   <span class="navBar">Home</span></a>
-           <a href="game.html"> <span class="navBar">Game</span></a> 
-            <a href="books.html">  <span class="navBar">Books</span> </a>
+			  <a href="game.html"> <span class="navBar mobileHide" >Game</span></a> 
+			  <a href="books.html">  <span class="navBar">Books</span> </a>
 
 						</div>
 					</header>
