Added Penguin Pals to home

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images/watson1.jpg" alt="" />
+										<img src="images/pen.png" alt="" />
 									</span>
-									<a>
-										<h2>IBM Watson</h2>
+										<a href="penpals/game.html">
+										<h2>Penguin Pals</h2>
 										<div class="content">
-											<p>Summer internship in product design at IBM Watson</p>
+											<p>Save the baby penguin!</p>
 										</div>
 									</a>
 								</article>
