--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Product Designer<br />
+								<h1>Product Manager<br />
 								HCI at Cornell University</h1>
 							</header>
 							<section class="tiles">
