--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Product Manager<br />
-								HCI at Cornell University</h1>
+									<h1> Product Manager</h1>
+								<h1> HCI at Cornell University </h1>
 							</header>
 							<section class="tiles">
 								<article class="style1">
