--- a/index.html
+++ b/index.html
@@ -21,29 +21,10 @@
 									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Hamed Rabah</span>
 								</a>
 
-							<!-- Nav - might use in the future-->
-								<!-- <nav>
-									<ul>
-										<li><a href="#menu">Menu</a></li>
-									</ul>
-								</nav> -->
 
 						</div>
 					</header>
 
-				<!-- Menu -->
-					<!-- <nav id="menu">
-						<h2>Rabah</h2>
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Ipsum veroeros</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
-						</ul>
-					</nav> -->
-
-				<!-- Main -->
 					<div id="main">
 						<div class="inner">
 							<header>
@@ -131,12 +112,12 @@
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/robot.jpg" alt="" />
+										<img src="images/economics.png" alt="" />
 									</span>
-									<a href="robots.html">
-										<h2>TechCrunch Robotics at MIT</h2>
+									<a href="dataviz.html">
+										<h2>Are Free Countries Richer?</h2>
 										<div class="content">
-											<p>I had the pleasure of attending the Tech Crunch Robotics conference at MIT</p>
+											<p>A data driven investigation into the wealth of nations</p>
 										</div>
 									</a>
 								</article>
