--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 									<span class="image">
 										<img src="images/economics.png" alt="" />
 									</span>
-									<a href="dataviz.html">
+									<a href="https://hamedrabah.medium.com/are-free-countries-richer-78e59cfcbd2a">
 										<h2>Are Free Countries Richer?</h2>
 										<div class="content">
 											<p>A data driven investigation into the wealth of nations</p>
