--- a/penpals/game.html
+++ b/penpals/game.html
@@ -25,7 +25,7 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="index.html" class="logo">
+								<a href="../index.html" class="logo">
 									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Hamed Rabah</span>
 								</a>
 
