--- a/penpals/game.html
+++ b/penpals/game.html
@@ -40,7 +40,7 @@
 					</header>
   <body>
     <div class="webgl-content">
-      <div id="gameContainer" style="width: 75%; height: 75%"></div>
+      <div id="gameContainer" style="width: 1500px; height: 1000px"></div>
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
