--- a/dataviz.html
+++ b/dataviz.html
@@ -56,55 +56,9 @@
                                 <iframe width="800" height="836" src="https://app.powerbi.com/view?r=eyJrIjoiOTZkYmFkZmQtODQ0OS00NzMwLWExYzEtOWIwNjYwYmQ1NWQ2IiwidCI6Ijc5YTQzMzIxLWIxMjMtNDUzZS04NGY2LWYwNTRiNzBiM2UzOSJ9&pageName=ReportSection" frameborder="0" allowFullScreen="true"></iframe></body>
 
 								<img class="aa-img" src="images/d301.webp">
-								<p class="aa-para">I was curious why some countries are richer than others: why some countries are poverty struck, yet others are flourishing. Many of the common theories include: culture, geography, democracy, and economic freedom. In this project I sought to explore the latter two items: in particular I wanted to explore what role economic freedom and political freedom (as measured by degree of democracy) plays in GDP / capita.
- </p>
-								<div class="aa-sectioning2">
-									<img src="images/d302.webp">
-									<img src="images/d303.webp">
-									<img src="images/d304.webp">
-								</div>
-								<pA few notes before diving in:
-                                GDP per capita is a flawed way to measure the average person’s livelihood, it doesn’t account for large disparities between the rich and poor. In countries such as Qatar or Singapore, take GDP/capita with a grain of salt.
-                                Political freedom is a hard thing to quantify. I used the Economist’s Democracy Index which takes into account such factors as political participation, civil liberties, and capacity of government to implement policies.
-                                For economic freedom I used The Index of Economic Freedom conducted by the Heritage Foundation and Wall Street Journal. It weighs such factors as property rights enforcement, judicial independence, and regulatory efficiency.
-
-                                Observation 1 —
-Both Economic and Political Freedoms have a positive correlation with GDP
-
-The magnitude is stronger on the economic front than the political one. If you are a country trying to improve your GDP/capita the best bang for your buck (no pun intended) comes from liberalizing the economy.
-Political freedom is also positively correlated with GDP/capita, but since it’s harder to enact democratic reforms those should be followed from the economic reforms, though both are needed in the long run.
-Observation 2—
-At the upper percentiles, increases in economic freedom have a higher impact on GDP than increases in political freedom
-
-From the charts above one can conclude the faster growth stimulant is market reforms. The interesting conclusion here is that even on the upper thresholds (high functioning market economy and high functioning democracy) — further improvements to market reforms yield further increases in GDP/capita.
-Conclusion: If the goal is increasing the national GDP — market reforms are the way to go.
-Observation 3
-You can be rich without democracy
-
-Option 1 — Be rich from oil.
-Option 2 — The Singapore model is an interesting exception as they straddle the line between democracy and authoritarian. One theory for how Singapore came to be such an exception can be seen on the economic freedom counterpart to this chart (below), notice Singapore is an outlier that has perhaps the highest economic liberalization of any economy in the world.
-
-A model worth considering for developing countries trying to replicate Singapore’s success is further liberalizing their economies.
-Observation 4
-You can’t be rich without economic liberalization
-
-Whereas there were cases of rich countries without democracy (Qatar, Kuwait, and to a lesser extent — Singapore) the reverse is not true.
-There is not a single case where a country is rich without a high degree of economic freedom.
-Observation 5
-The future winners of growth
-I am bullish on the following countries continuing a pattern of high growth due to their combination of high economic freedom paired with moderate-high levels of democracy.
-
-Costa Rica
-Uruguay
-Slovenia
-Malta
-Jamaica
-Thailand
-Armenia
-Georgia
-If these countries follow on a path of economic liberalization and moderate degrees of democratic institutions I expect they will continue on a positive GDP and GDP/capita growth trajectory in the future.
-All the other countries within the area of the upper right (Israel, Japan, Estonia) — serve as examples of what promises await the up and coming countries.
-
+								<p class="aa-para">I was curious why some countries are richer than others: why some countries are poverty struck, yet others are flourishing. 
+                                    Many of the common theories include: culture, geography, democracy, and economic freedom. In this project I sought to explore the latter two items: in particular I wanted to explore what role economic freedom and political freedom (as measured by degree of democracy) plays in GDP / capita
+								</div> 
 							</div>
 						</div>
 					</div>
