--- a/penpals/game.html
+++ b/penpals/game.html
@@ -6,13 +6,19 @@
     <title>Penguin Pals</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
+
+
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+
     <script>
       var gameInstance = UnityLoader.instantiate("gameContainer", "Build/penpals.json", {onProgress: UnityProgress});
     </script>
+
+
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	</head>
@@ -26,7 +32,7 @@
 
 							<!-- Logo -->
 								<a href="../index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Hamed Rabah</span>
+									<span class="symbol"><img src="../images/logo.svg" alt="" /></span><span class="title">Hamed Rabah</span>
 								</a>
 
 							<!-- Nav -->
