--- a/dataviz.html
+++ b/dataviz.html
@@ -51,11 +51,10 @@
 					<div id="main">
 						<div class="inner">
 							<div class="aa-wrapper">
-								<h1 class="aa-heading">Visualizing movie data in D3.JS</h1>
-								<p class="aa-para">Turning a clunky dataset into something beautiful and useful.</p>
-                                <iframe width="800" height="836" src="https://app.powerbi.com/view?r=eyJrIjoiOTZkYmFkZmQtODQ0OS00NzMwLWExYzEtOWIwNjYwYmQ1NWQ2IiwidCI6Ijc5YTQzMzIxLWIxMjMtNDUzZS04NGY2LWYwNTRiNzBiM2UzOSJ9&pageName=ReportSection" frameborder="0" allowFullScreen="true"></iframe></body>
-
-								<img class="aa-img" src="images/d301.webp">
+								<h1 class="aa-heading">Are Free Countries richer?</h1>
+								<p class="aa-para">A data driven investigation into the wealth of nations</p>
+                                <iframe width="800" height="500" src="https://app.powerbi.com/view?r=eyJrIjoiOTZkYmFkZmQtODQ0OS00NzMwLWExYzEtOWIwNjYwYmQ1NWQ2IiwidCI6Ijc5YTQzMzIxLWIxMjMtNDUzZS04NGY2LWYwNTRiNzBiM2UzOSJ9&pageName=ReportSection" frameborder="0" allowFullScreen="true"></iframe></body>
+							 
 								<p class="aa-para">I was curious why some countries are richer than others: why some countries are poverty struck, yet others are flourishing. 
                                     Many of the common theories include: culture, geography, democracy, and economic freedom. In this project I sought to explore the latter two items: in particular I wanted to explore what role economic freedom and political freedom (as measured by degree of democracy) plays in GDP / capita
 								</div> 
