--- a/penpals/game.html
+++ b/penpals/game.html
@@ -45,13 +45,26 @@
 						</div>
 					</header>
   <body>
-    <div class="webgl-content">
-      <div id="gameContainer" style="width: 1500px; height: 1000px"></div>
-      <div class="footer">
-        <div class="webgl-logo"></div>
-        <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title">Save the penguin, save the world</div>
+
+    <div id="main">
+      <div class="inner">
+        <div class="aa-wrapper">
+          <h1 class="aa-heading">Are Free Countries richer?</h1>
+          <p class="aa-para">A data driven investigation into the wealth of nations</p>
+          <div class="webgl-content">
+            <div id="gameContainer" style="width: 800px; height: 500px"></div>
+            <div class="footer">
+              <div class="webgl-logo"></div>
+              <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
+              <div class="title">Save the penguin, save the world</div>
+            </div>
+          </div>
+            </div> 
+        </div>
       </div>
     </div>
+
+
+    
   </body>
 </html>
