--- a/penpals/game.html
+++ b/penpals/game.html
@@ -64,7 +64,34 @@
       </div>
     </div>
 
+    <!-- Footer -->
+    <footer id="footer">
+      <div class="inner">
+              <section>
+                <h2>Follow</h2>
+                <ul class="icons">
+                  <li><a href="https://twitter.com/hamedArabah" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
+                  <li><a href="https://www.linkedin.com/in/hamedrabah/" class="icon style2 fa-linkedin"><span class="label">Dribbble</span></a></li>
+                  <li><a href="https://github.com/hamedrabah" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
+                  <li><a href="https://www.instagram.com/classichamoudi/" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+                  <li> <a href="mailto:hr277@cornell.edu" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+                </ul>
+              </section>
+              <ul class="copyright">
+                <li>&copy; Hamed Rabah</li>
+              </ul>
+            </div>
+          </footer>
+      </div>
 
-    
-  </body>
+<!-- Scripts -->
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/browser.min.js"></script>
+<script src="assets/js/breakpoints.min.js"></script>
+<script src="assets/js/util.js"></script>
+<script src="assets/js/main.js"></script>
+
+</body>
 </html>
+
+
