--- a/dataviz.html
+++ b/dataviz.html
@@ -55,6 +55,15 @@
 						</div>
 					</div>
 
+                    <h2 class="subhead">Observation 1 —</h2>
+                    <h3> Both Economic and Political Freedoms have a positive correlation with GDP </h3>
+
+
+                    <h2 class="subhead">Observation 2 —</h2>
+                    <h3> At the upper percentiles, increases in economic freedom have a higher impact on GDP than increases in political freedom </h3>
+
+
+
 					<!-- Footer -->
                     <footer id="footer">
                         <div class="inner">
