--- a/dataviz.html
+++ b/dataviz.html
@@ -57,6 +57,13 @@
 
                     <h2 class="subhead">Observation 1 —</h2>
                     <h3> Both Economic and Political Freedoms have a positive correlation with GDP </h3>
+                    <img src="images/econ1.png">
+
+                    <p> The magnitude is stronger on the economic front than the political one. If you are a country trying to improve your GDP/capita the best bang for your buck (no pun intended) comes from liberalizing the economy.
+                    </p>
+
+                    <p> Political freedom is also positively correlated with GDP/capita, but since it’s harder to enact democratic reforms those should be followed from the economic reforms, though both are needed in the long run.
+                    </p>
 
 
                     <h2 class="subhead">Observation 2 —</h2>
