--- a/dataviz.html
+++ b/dataviz.html
@@ -54,9 +54,10 @@
 							</div>
 						</div>
 					</div>
-
-                    <h2 class="subhead">Observation 1 —</h2>
-                    <h3> Both Economic and Political Freedoms have a positive correlation with GDP </h3>
+                    <div class="inner">
+                        <div class="aa-wrapper">
+                            <h2 class="aa-heading">Observation 1</h2> \   
+                    <h4> Both Economic and Political Freedoms have a positive correlation with GDP </h4>
                     <img src="images/econ1.png">
 
                     <p> The magnitude is stronger on the economic front than the political one. If you are a country trying to improve your GDP/capita the best bang for your buck (no pun intended) comes from liberalizing the economy.
