--- a/dataviz.html
+++ b/dataviz.html
@@ -49,7 +49,7 @@
                                 <iframe width="800" height="500" src="https://app.powerbi.com/view?r=eyJrIjoiOTZkYmFkZmQtODQ0OS00NzMwLWExYzEtOWIwNjYwYmQ1NWQ2IiwidCI6Ijc5YTQzMzIxLWIxMjMtNDUzZS04NGY2LWYwNTRiNzBiM2UzOSJ9&pageName=ReportSection" frameborder="0" allowFullScreen="true"></iframe></body>
 							 
 								<p class="aa-para">I was curious why some countries are richer than others: why some countries are poverty struck, yet others are flourishing. 
-                                    Many of the common theories include: culture, geography, democracy, and economic freedom. In this project I sought to explore the latter two items: in particular I wanted to explore what role economic freedom and political freedom (as measured by degree of democracy) plays in GDP / capita
+                                    Many of the common theories include: culture, geography, democracy, and economic freedom. In this project I sought to explore the latter two items: in particular I wanted to explore what role economic freedom and political freedom play in GDP per capita. 
                                 <br> 
                                 <p class="aa-para">Read my full analysis <a href="https://hamedrabah.medium.com/are-free-countries-richer-78e59cfcbd2a?postPublishedType=repub"> here </a>
                                 
