--- a/dataviz.html
+++ b/dataviz.html
@@ -6,7 +6,7 @@
 
 <html>
 	<head>
-		<title>Visualizing movie data in D3.JS</title>
+		<title>Are Free Countries Richer?</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -46,12 +46,12 @@
 							<div class="aa-wrapper">
 								<h1 class="aa-heading">Are Free Countries richer?</h1>
 								<p class="aa-para">A data driven investigation into the wealth of nations</p>
-                                <iframe width="800" height="500" src="https://app.powerbi.com/view?r=eyJrIjoiOTZkYmFkZmQtODQ0OS00NzMwLWExYzEtOWIwNjYwYmQ1NWQ2IiwidCI6Ijc5YTQzMzIxLWIxMjMtNDUzZS04NGY2LWYwNTRiNzBiM2UzOSJ9&pageName=ReportSection" frameborder="0" allowFullScreen="true"></iframe></body>
+                                <iframe width="1000" height="600" src="https://app.powerbi.com/view?r=eyJrIjoiOTZkYmFkZmQtODQ0OS00NzMwLWExYzEtOWIwNjYwYmQ1NWQ2IiwidCI6Ijc5YTQzMzIxLWIxMjMtNDUzZS04NGY2LWYwNTRiNzBiM2UzOSJ9&pageName=ReportSection" frameborder="0" allowFullScreen="true"></iframe></body>
 							 
 								<p class="aa-para">I was curious why some countries are richer than others: why some countries are poverty struck, yet others are flourishing. 
                                     Many of the common theories include: culture, geography, democracy, and economic freedom. In this project I sought to explore the latter two items: in particular I wanted to explore what role economic freedom and political freedom play in GDP per capita. 
                                 <br> 
-                                <p class="aa-para">Read my full analysis <a href="https://hamedrabah.medium.com/are-free-countries-richer-78e59cfcbd2a?postPublishedType=repub"> here </a>
+                                <p class="aa-para"> <strong> Read my full analysis <a href="https://hamedrabah.medium.com/are-free-countries-richer-78e59cfcbd2a?postPublishedType=repub"> here </a> </strong
                                 
                                 </div> 
 							</div>
